--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en-US" manifest="manifest.appcache">
 <head>
   <meta charset="utf-8">
-  <title>Demon's Souls Cheat Sheet</title>
+  <title>Stardew Valley Checklist</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico?">
   <link rel="apple-touch-icon-precomposed" href="img/favicon-152.png">
   <link rel="mask-icon" href="img/pinned-tab-icon.svg" color="#000000">
-  <meta name="description" content="Cheat sheet for Demon's Souls. Checklist of things to do, items to get, etc.">
-  <meta name="author" content="iforgottosave">
+  <meta name="description" content="Checklist for Stardew Valley 100%">
+  <meta name="author" content="Mikiitakagi">
   <meta name="mobile-web-app-capable" content="yes">
   <link id="bootstrap" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link href="css/main.css" rel="stylesheet">
@@ -47,8 +47,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h1>Demon's Souls Cheat Sheet</h1>
-        <p class="lead">Contribute to the guide at the <a href="https://github.com/iforgottosave/demons-souls-cheat-sheet">GitHub Page</a></p>
+        <h1>Stardew Valley Checklist</h1>
+        <p class="lead">Contribute to the guide at the <a href="">PLACEHOLDER</a></p>
       </div>
     </div>
 
