Finished Basic Trophy Checklist
Added all base game trophy and icon for each trophy.

--- a/index.html
+++ b/index.html
@@ -751,43 +751,62 @@
         </div>
 
         <div id="item_list">
-          <h3 id="Base_Game_Trophy"><a href="#Base_Game_Trophy_col" data-toggle="collapse" class="btn btn-primary btn-collapse btn-sm"></a>Sage's Trophy: Learn all spells <span id="checklist_totals_1"></span></h3>
+          <h3 id="Base_Game_Trophy"><a href="#Base_Game_Trophy_col" data-toggle="collapse" class="btn btn-primary btn-collapse btn-sm"></a>Base Game Trophies<span id="checklist_totals_1"></span></h3>
           <ul id="Base_Game_Trophy_col" class="collapse in">
-            <li data-id="checklist_1_1"><a href="https://demonssouls.wiki.fextralife.com/Acid+Cloud">Acid Cloud</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Eroded+Demon's+Soul">Eroded Demon's Soul</a></li>
-			<li data-id="checklist_1_2"><a href="https://demonssouls.wiki.fextralife.com/Cloak">Cloak</a>: Sold by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> / <a href="https://demonssouls.wiki.fextralife.com/Freke's+Apprentice">Freke's Apprentice</a> for 500 Souls</li>
-			<li data-id="checklist_1_3"><a href="https://demonssouls.wiki.fextralife.com/Cursed+Weapon">Cursed Weapon</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Yuria,+the+Witch">Yuria, the Witch</a> for <a href="https://demonssouls.wiki.fextralife.com/Silver+Demon's+Soul">Silver Demon's Soul</a></li>
-			<li data-id="checklist_1_4"><a href="https://demonssouls.wiki.fextralife.com/Death+Cloud">Death Cloud</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Pureblood+Demon's+Soul">Pureblood Demon's Soul</a></li>
-			<li data-id="checklist_1_5"><a href="https://demonssouls.wiki.fextralife.com/Demon's+Prank">Demon's Prank</a>: Sold by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> / <a href="https://demonssouls.wiki.fextralife.com/Freke's+Apprentice">Freke's Apprentice</a> for 500 Souls</li>
-			<li data-id="checklist_1_6"><a href="https://demonssouls.wiki.fextralife.com/Enchant+Weapon">Enchant Weapon</a>: Sold by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> / <a href="https://demonssouls.wiki.fextralife.com/Freke's+Apprentice">Freke's Apprentice</a> for 5,000 Souls</li>
-			<li data-id="checklist_1_7"><a href="https://demonssouls.wiki.fextralife.com/Fireball">Fireball</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Dragon+Demon's+Soul">Dragon Demon's Soul</a></li>
-			<li data-id="checklist_1_8"><a href="https://demonssouls.wiki.fextralife.com/Fire+Spray">Fire Spray</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Hard+Demon's+Soul">Hard Demon's Soul</a></li>
-			<li data-id="checklist_1_9"><a href="https://demonssouls.wiki.fextralife.com/Firestorm">Firestorm</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Yuria,+the+Witch">Yuria, the Witch</a> for <a href="https://demonssouls.wiki.fextralife.com/Dragon+Demon's+Soul">Dragon Demon's Soul</a></li>
-			<li data-id="checklist_1_10"><a href="https://demonssouls.wiki.fextralife.com/Flame+Toss">Flame Toss</a>: Sold by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> / <a href="https://demonssouls.wiki.fextralife.com/Freke's+Apprentice">Freke's Apprentice</a> for 1,000 Souls</li>
-			<li data-id="checklist_1_11"><a href="https://demonssouls.wiki.fextralife.com/Homing+Soul+Arrow">Homing Soul Arrow</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Yellow+Demon's+Soul">Yellow Demon's Soul</a></li>
-			<li data-id="checklist_1_12"><a href="https://demonssouls.wiki.fextralife.com/Ignite">Ignite</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Yuria,+the+Witch">Yuria, the Witch</a> for <a href="https://demonssouls.wiki.fextralife.com/Hard+Demon's+Soul">Hard Demon's Soul</a></li>
-			<li data-id="checklist_1_13"><a href="https://demonssouls.wiki.fextralife.com/Light+Weapon">Light Weapon</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Silver+Demon's+Soul">Silver Demon's Soul</a></li>
-			<li data-id="checklist_1_14"><a href="https://demonssouls.wiki.fextralife.com/Poison+Cloud">Poison Cloud</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Wriggling+Demon's+Soul">Wriggling Demon's Soul</a></li>
-			<li data-id="checklist_1_15"><a href="https://demonssouls.wiki.fextralife.com/Protection">Protection</a>: Sold by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> / <a href="https://demonssouls.wiki.fextralife.com/Freke's+Apprentice">Freke's Apprentice</a> for 5,000 Souls</li>
-			<li data-id="checklist_1_16"><a href="https://demonssouls.wiki.fextralife.com/Relief">Relief</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Yuria,+the+Witch">Yuria, the Witch</a> for <a href="https://demonssouls.wiki.fextralife.com/Pureblood+Demon's+Soul">Pureblood Demon's Soul</a></li>
-			<li data-id="checklist_1_17"><a href="https://demonssouls.wiki.fextralife.com/Soul+Arrow">Soul Arrow</a>: Sold by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> / <a href="https://demonssouls.wiki.fextralife.com/Freke's+Apprentice">Freke's Apprentice</a> for 1,000 Souls</li>
-			<li data-id="checklist_1_18"><a href="https://demonssouls.wiki.fextralife.com/Soul+Ray">Soul Ray</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Doll+Demon's+Soul">Doll Demon's Soul</a></li>
-			<li data-id="checklist_1_19"><a href="https://demonssouls.wiki.fextralife.com/Soulsucker">Soulsucker</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Yuria,+the+Witch">Yuria, the Witch</a> for <a href="https://demonssouls.wiki.fextralife.com/Maiden+in+Black's+Demon's+Soul">Maiden in Black's Demon's Soul</a></li>
-			<li data-id="checklist_1_20"><a href="https://demonssouls.wiki.fextralife.com/Soul+Thirst">Soul Thirst</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Yuria,+the+Witch">Yuria, the Witch</a> for <a href="https://demonssouls.wiki.fextralife.com/Yellow+Demon's+Soul">Yellow Demon's Soul</a></li>
-			<li data-id="checklist_1_21"><a href="https://demonssouls.wiki.fextralife.com/Warding">Warding</a>: Given by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> for <a href="https://demonssouls.wiki.fextralife.com/Iron+Demon's+Soul">Iron Demon's Soul</a></li>
-			<li data-id="checklist_1_22"><a href="https://demonssouls.wiki.fextralife.com/Water+Veil">Water Veil</a>: Sold by <a href="https://demonssouls.wiki.fextralife.com/Sage+Freke">Sage Freke, the Visionary</a> / <a href="https://demonssouls.wiki.fextralife.com/Freke's+Apprentice">Freke's Apprentice</a> for 500 Souls</li>
+			<li data-id="checklist_1_1"><img src="img/platinum.png" alt="Platinum Trophy" class="trophy-icon"><a href="">Iridium Seal</a>: This priceless treasure is the mark of a truly great farmer! Grandpa lives inside...</li>
+			<li data-id="checklist_1_2"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Greenhorn (15k)</a>: Earn 15,000g</li>
+			<li data-id="checklist_1_3"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Cowpoke (50k)</a>: Earn 50,000g</li>
+			<li data-id="checklist_1_4"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Homesteader (250k)</a>: Earn 250,000g</li>
+			<li data-id="checklist_1_5"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Millionaire (1mil)</a>: Earn 1,000,000g</li>
+			<li data-id="checklist_1_6"><img src="img/gold.png" alt="Gold Trophy" class="trophy-icon"><a href="">Legend (10mil)</a>: Earn 10,000,000g (Secret Achievement)</li>
+			<li data-id="checklist_1_7"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">A Complete Collection</a>: Complete the museum collection.</li>
+			<li data-id="checklist_1_8"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">A New Friend</a>: Reach a 5-heart friend level with someone.</li>
+			<li data-id="checklist_1_9"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Best Friends</a>: Reach a 10-heart friend level with someone.</li>
+			<li data-id="checklist_1_10"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">The Beloved Farmer</a>: Reach a 10-heart friend level with 8 people.</li>
+			<li data-id="checklist_1_11"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Cliques</a>: Reach a 5-heart friend level with 4 people.</li>
+			<li data-id="checklist_1_12"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Networking</a>: Reach a 5-heart friend level with 10 people.</li>
+			<li data-id="checklist_1_13"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Popular</a>: Reach a 5-heart friend level with 20 people.</li>
+			<li data-id="checklist_1_14"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Cook</a>: Cook 10 different recipes.</li>
+			<li data-id="checklist_1_15"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">Sous Chef</a>: Cook 25 different recipes.</li>
+			<li data-id="checklist_1_16"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">Gourmet Chef</a>: Cook every recipe.</li>
+			<li data-id="checklist_1_17"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Moving Up</a>: Upgrade your house.</li>
+			<li data-id="checklist_1_18"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Living Large</a>: Upgrade your house to the maximum size (2nd upgrade, not cellar).</li>
+			<li data-id="checklist_1_19"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">D.I.Y.</a>: Craft 15 different items.</li>
+			<li data-id="checklist_1_20"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">Artisan</a>: Craft 30 different items.</li>
+			<li data-id="checklist_1_21"><img src="img/gold.png" alt="Gold Trophy" class="trophy-icon"><a href="">Craft Master</a>: Craft every item.</li>
+			<li data-id="checklist_1_22"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Fisherman</a>: Catch 10 different fish.</li>
+			<li data-id="checklist_1_23"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Ol' Mariner</a>: Catch 24 different fish.</li>
+			<li data-id="checklist_1_24"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">Master Angler</a>: Catch every fish.</li>
+			<li data-id="checklist_1_25"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Mother Catch</a>: Catch 100 fish.</li>
+			<li data-id="checklist_1_26"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Treasure Trove</a>: Donate 40 different items to the museum.</li>
+			<li data-id="checklist_1_27"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Gofer</a>: Complete 10 'Help Wanted' requests.</li>
+			<li data-id="checklist_1_28"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">A Big Help</a>: Complete 40 'Help Wanted' requests.</li>
+			<li data-id="checklist_1_29"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Polyculture</a>: Ship 15 of each crop.</li>
+			<li data-id="checklist_1_30"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Monoculture</a>: Ship 300 of one crop.</li>
+			<li data-id="checklist_1_31"><img src="img/gold.png" alt="Gold Trophy" class="trophy-icon"><a href="">Full Shipment</a>: Ship every item.</li>
+			<li data-id="checklist_1_32"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Prairie King</a>: Beat 'Journey of the Prairie King'.</li>
+			<li data-id="checklist_1_33"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">The Bottom</a>: Reach the lowest level of the mines.</li>
+			<li data-id="checklist_1_34"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Local Legend</a>: Restore the Pelican Town Community Center.</li>
+			<li data-id="checklist_1_35"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Joja Co. Member Of The Year</a>: Purchase all Joja Community Development projects.</li>
+			<li data-id="checklist_1_36"><img src="img/gold.png" alt="Gold Trophy" class="trophy-icon"><a href="">Mystery Of The Stardrops</a>: Find every Stardrop.</li>
+			<li data-id="checklist_1_37"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">Fector's Challenge</a>: Beat 'Journey Of The Prairie King' without dying. (Secret Achievement)</li>
+			<li data-id="checklist_1_38"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Full House</a>: Get married and have two kids.</li>
+			<li data-id="checklist_1_39"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><a href="">Singular Talent</a>: Reach level 10 in a skill.</li>
+			<li data-id="checklist_1_40"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">Master Of The Five Ways</a>: Reach level 10 in every skill.</li>
+			<li data-id="checklist_1_41"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><a href="">Protector Of The Valley</a>: Complete all of the Adventure Guild Monster Slayer goals.</li>
           </ul>
 
-          <h3 id="1.6_Update"><a href="#1.6_Update_col" data-toggle="collapse" class="btn btn-primary btn-collapse btn-sm"></a>Saint Trophy: Learn all miracles <span id="checklist_totals_2"></span></h3>
+          <h3 id="1.6_Update"><a href="#1.6_Update_col" data-toggle="collapse" class="btn btn-primary btn-collapse btn-sm"></a>1.6 Update Trophies<span id="checklist_totals_2"></span></h3>
           <ul id="1.6_Update_col" class="collapse in">
-            <li data-id="checklist_2_1"><b>Well-Read</b>: Read every book.</li>
-			<li data-id="checklist_2_2"><b>Two Thumbs Up</b>: See a movie.</li>
-			<li data-id="checklist_2_3"><b>Blue Ribbon</b>: Get 1st place in the Stardew Valley Fair competition.</li>
-			<li data-id="checklist_2_4"><b>An Unforgettable Soup</b>: Delight the Governor.</li>
-			<li data-id="checklist_2_5"><b>Good Neighbors</b>: Help your forest neighbors grow their family.</li>
-			<li data-id="checklist_2_6"><b>A Distant Shore</b>: Reach Ginger Island.</li>
-			<li data-id="checklist_2_7"><b>Danger in the Deep</b>: Reach the bottom of the 'dangerous' mines.</li>
-			<li data-id="checklist_2_8"><b>Infinite Power</b>: Obtain the most powerful weapon.</li>
-			<li data-id="checklist_2_9"><b>Perfection</b>: Reach the summit.</li>
+            <li data-id="checklist_2_1"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><b>Well-Read</b>: Read every book.</li>
+			<li data-id="checklist_2_2"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><b>Two Thumbs Up</b>: See a movie.</li>
+			<li data-id="checklist_2_3"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><b>Blue Ribbon</b>: Get 1st place in the Stardew Valley Fair competition.</li>
+			<li data-id="checklist_2_4"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><b>An Unforgettable Soup</b>: Delight the Governor.</li>
+			<li data-id="checklist_2_5"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><b>Good Neighbors</b>: Help your forest neighbors grow their family.</li>
+			<li data-id="checklist_2_6"><img src="img/bronze.png" alt="Bronze Trophy" class="trophy-icon"><b>A Distant Shore</b>: Reach Ginger Island.</li>
+			<li data-id="checklist_2_7"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><b>Danger in the Deep</b>: Reach the bottom of the 'dangerous' mines.</li>
+			<li data-id="checklist_2_8"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><b>Infinite Power</b>: Obtain the most powerful weapon.</li>
+			<li data-id="checklist_2_9"><img src="img/silver.png" alt="Silver Trophy" class="trophy-icon"><b>Perfection</b>: Reach the summit.</li>
           </ul>
         </div>
       </div>
